--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/null/*
 # Created by https://www.toptal.com/developers/gitignore/api/intellij+all,sbt,scala,windows,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij+all,sbt,scala,windows,macos
 
